@@ -28,7 +28,7 @@
     </tr>
     <tr>
       <th>Latest Development Release</th>
-      <td><a href="v4.0.0.html">v4.0.0beta5</a></td>
+      <td><a href="v4.0.0.html">v4.0.0beta6</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
@@ -125,7 +125,7 @@
   </ul>
   <hr>
   <p>
-    Last updated  $Date: 2010-06-11 22:08:01 $.
+    Last updated  $Date: 2010-06-11 22:58:58 $.
   </p>
 </body>
 </html>
