@@ -16,7 +16,7 @@
 <UL>
 <HR SIZE=4 WIDTH=65% ALIGN=left>
 <B>Current Version</B>: v4.0.0<BR>
-<B>Previous Version</B>: <A HREF=v3.9.2.html>v3.9.2</a><BR>
+<B>Previous Version</B>: <A HREF=v3.9.3.html>v3.9.3</a><BR>
 <B>Master FTP Site</B>: <A HREF="ftp://ftp.remotesensing.org/pub/libtiff">
 ftp.remotesensing.org</a>, directory pub/libtiff</A><BR>
 <B>Master HTTP Site</B>: <A HREF="http://download.osgeo.org/libtiff">
@@ -154,8 +154,8 @@ Other important backward incompatible changes in the public API:
 
 <UL>
 
-	<LI>Updated autotools: Autoconf 2.64, Automake 1.11, libtool
-	2.2.6.
+	<LI>Updated autotools: Autoconf 2.65, Automake 1.11, libtool
+	2.2.10.
 
 	<LI>Enabled support for Automake silent build rules
 	(--enable-silent-rules or 'make V=0')
@@ -231,7 +231,7 @@ Other important backward incompatible changes in the public API:
 <UL> 
 </UL>
 
-Last updated $Date: 2009-11-04 17:49:25 $.
+Last updated $Date: 2010-06-11 22:58:58 $.
 
 </BODY>
 </HTML>
